# poo-simulation

./: .gitignore  Argon.hh  CMakeLists.txt  CONCEPTION.md  Cheatsheet.md  DrawingFrame.hh  Enclosure.cc  Enclosure.hh  Exercice12.cc  Exercice13.cc  Exercice7.cc  Exercice9.cc  Helium.hh  JOURNAL.md  Makefile  NOMS  Neon.cc  Neon.hh  Particle.cc  Particle.hh  Printable.cc  Printable.hh  README.md  REPONSES.md  RandomGenerator.hh  Surcharge des Operateurs.md  System.cc  System.hh  TextViewer.cc  TextViewer.hh  Vector3D.cc  Vector3D.hh  flake.nix  graphisme.cc  main.cc  simulation.cc  test_Enclosure.cc  test_Particle.cc  test_System.cc  test_Vector3D.cc
.github/workflows/: cmake-single-platform.yml
Documents/: Cheatsheet.md
Drawings/: Drawable.hh  DrawingFrame.hh
Entrypoints/: Exercice11.cc  Exercice12.cc  Exercice13.cc  Exercice7.cc  Exercice9.cc  Simulation.cc  graphisme.cc  test_Enclosure.cc  test_Particle.cc  test_System.cc  test_Vector3D.cc
FileSaver/: FileSaver.cc  FileSaver.hh
Graphics/: Camera.cc  Camera.hh  ControlsWidget.hh  GLSphere.cc  GLSphere.hh  GLWidget.cc  GLWidget.hh  InfoWidget.hh  Inputs.hh  Light.hh  MainWindow.hh  OpenGLViewer.cc  OpenGLViewer.hh  resources.qrc  vertex_shader.hh
Graphics/shaders/: FragmentShaderMinimal.glsl  FragmentShaderPhong.glsl  VertexShader.glsl  fragment_shader.glsl  vertex_shader.glsl
NumberGenerators/: Ex9NumberGenerator.hh  NumberGenerator.hh  RandomGenerator.hh
Particles/: Argon.cc  Argon.hh  Helium.cc  Helium.hh  MotionTrace.cc  MotionTrace.hh  Neon.cc  Neon.hh  Particle.cc  Particle.hh  TraceParticle.cc  TraceParticle.hh
Text/: TextViewer.cc  TextViewer.hh
